# snailly-backend-thesis

./: .env.example  .gitignore  main.py  pyproject.toml  server.py
migrations/versions/: 60f263991146_update.py  8069e17ba632_update.py  8f2a4bc529d3_update.py  983f5cf09aa7_.py  ca298ed4b1e5_update.py  f624264f3c00_update.py
public/: dataset_final.csv
public/models/: svm_model.pkl  svm_model_20250804_223138.pkl  tfidf_vectorizer.pkl  tfidf_vectorizer_20250804_223138.pkl
src/config/: config.py  database.py
src/controllers/: MainController.py  ScrappingController.py
src/models/: CleanData.py  PredictData.py  Scrapping.py  UrlClassification.py
src/repositories/: CleanDataRepository.py  PredictDataRepository.py  ScrappingRepository.py  UrlClassificationRepository.py
src/routes/: main.py
src/server/: main.py
src/services/: CleanDataServices.py  HITLServices.py  PredictDataServices.py  ScrappingServices.py  Service.py
src/utils/: convert.py  convertResponse.py  errorHandler.py  getResponse.py
src/utils/Preprocessing/: ImageProcessor.py  TextProcessor.py
src/utils/Scrapping/: Scrapping.py
